# bolotudu

./: CMakeLists.txt  Makefile  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  resources.qrc  tictactoe.pro  ui_mainwindow.h
.github/workflows/: build-windows.yml
tictactoe.app/Contents/: Info.plist
tictactoe.app/Contents/MacOS/: tictactoe
